修改make脚本
