# routers/api/v1/tag.go
@@ -1,251 +1,0 @@
-package v1
-
-import (
-	"net/http"
-
-	"github.com/Unknwon/com"
-	"github.com/astaxie/beego/validation"
-	"github.com/gin-gonic/gin"
-
-	"github.com/Quons/go-gin-example/pkg/app"
-	"github.com/Quons/go-gin-example/pkg/e"
-	"github.com/Quons/go-gin-example/pkg/export"
-	"github.com/Quons/go-gin-example/pkg/setting"
-	"github.com/Quons/go-gin-example/pkg/util"
-	"github.com/Quons/go-gin-example/service/tag_service"
-	"github.com/sirupsen/logrus"
-)
-
-// @Summary 获取多个文章标签
-// @Produce  json
-// @Param name query string false "Name"
-// @Param state query int false "State"
-// @Success 200 {string} json "{"code":200,"data":{"lists":[{"id":3,"created_on":1516849721,"modified_on":0,"name":"3333","created_by":"4555","modified_by":"","state":0}],"total":29},"msg":"ok"}"
-// @Router /api/v1/tags [get]
-func GetTags(c *gin.Context) {
-	appG := app.Gin{C: c}
-	name := c.Query("name")
-	state := -1
-	if arg := c.Query("state"); arg != "" {
-		state = com.StrTo(arg).MustInt()
-	}
-
-	tagService := tag_service.Tag{
-		Name:     name,
-		State:    state,
-		PageNum:  util.GetPage(c),
-		PageSize: setting.AppSetting.PageSize,
-	}
-	tags, err := tagService.GetAll()
-	if err != nil {
-		appG.Response(http.StatusOK, e.ERROR_GET_TAGS_FAIL, nil)
-		return
-	}
-
-	count, err := tagService.Count()
-	if err != nil {
-		appG.Response(http.StatusOK, e.ERROR_COUNT_TAG_FAIL, nil)
-		return
-	}
-
-	appG.Response(http.StatusOK, e.SUCCESS, map[string]interface{}{
-		"lists": tags,
-		"total": count,
-	})
-}
-
-type AddTagForm struct {
-	Name      string `form:"name" valid:"Required;MaxSize(100)"`
-	CreatedBy string `form:"created_by" valid:"Required;MaxSize(100)"`
-	State     int    `form:"state" valid:"Range(0,1)"`
-}
-
-// @Summary 新增文章标签
-// @Produce  json
-// @Param name query string true "Name"
-// @Param state query int false "State"
-// @Param created_by query string false "CreatedBy"
-// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
-// @Router /api/v1/tags [post]
-func AddTag(c *gin.Context) {
-	var (
-		appG = app.Gin{C: c}
-		form AddTagForm
-	)
-
-	httpCode, errCode := app.BindAndValid(c, &form)
-	if errCode != e.SUCCESS {
-		appG.Response(httpCode, errCode, nil)
-		return
-	}
-
-	tagService := tag_service.Tag{
-		Name:      form.Name,
-		CreatedBy: form.CreatedBy,
-		State:     form.State,
-	}
-	exists, err := tagService.ExistByName()
-	if err != nil {
-		appG.Response(http.StatusOK, e.ERROR_EXIST_TAG_FAIL, nil)
-		return
-	}
-	if exists {
-		appG.Response(http.StatusOK, e.ERROR_EXIST_TAG, nil)
-		return
-	}
-
-	err = tagService.Add()
-	if err != nil {
-		appG.Response(http.StatusOK, e.ERROR_ADD_TAG_FAIL, nil)
-		return
-	}
-
-	appG.Response(http.StatusOK, e.SUCCESS, nil)
-}
-
-type EditTagForm struct {
-	ID         int    `form:"id" valid:"Required;Min(1)"`
-	Name       string `form:"name" valid:"Required;MaxSize(100)"`
-	ModifiedBy string `form:"modified_by" valid:"Required;MaxSize(100)"`
-	State      int    `form:"state" valid:"Range(0,1)"`
-}
-
-// @Summary 修改文章标签
-// @Produce  json
-// @Param id param int true "ID"
-// @Param name query string true "ID"
-// @Param state query int false "State"
-// @Param modified_by query string true "ModifiedBy"
-// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
-// @Router /api/v1/tags/{id} [put]
-func EditTag(c *gin.Context) {
-	var (
-		appG = app.Gin{C: c}
-		form = EditTagForm{ID: com.StrTo(c.Param("id")).MustInt()}
-	)
-
-	httpCode, errCode := app.BindAndValid(c, &form)
-	if errCode != e.SUCCESS {
-		appG.Response(httpCode, errCode, nil)
-		return
-	}
-
-	tagService := tag_service.Tag{
-		ID:         form.ID,
-		Name:       form.Name,
-		ModifiedBy: form.ModifiedBy,
-		State:      form.State,
-	}
-
-	exists, err := tagService.ExistByID()
-	if err != nil {
-		appG.Response(http.StatusOK, e.ERROR_EXIST_TAG_FAIL, nil)
-		return
-	}
-
-	if !exists {
-		appG.Response(http.StatusOK, e.ERROR_NOT_EXIST_TAG, nil)
-		return
-	}
-
-	err = tagService.Edit()
-	if err != nil {
-		appG.Response(http.StatusOK, e.ERROR_EDIT_TAG_FAIL, nil)
-		return
-	}
-
-	appG.Response(http.StatusOK, e.SUCCESS, nil)
-}
-
-// @Summary 删除文章标签
-// @Produce  json
-// @Param id param int true "ID"
-// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
-// @Router /api/v1/tags/{id} [delete]
-func DeleteTag(c *gin.Context) {
-	appG := app.Gin{C: c}
-	valid := validation.Validation{}
-	id := com.StrTo(c.Param("id")).MustInt()
-	valid.Min(id, 1, "id").Message("ID必须大于0")
-
-	if valid.HasErrors() {
-		app.MarkErrors(valid.Errors)
-		appG.Response(http.StatusOK, e.ERROR_INVALID_PARAMS, nil)
-	}
-
-	tagService := tag_service.Tag{ID: id}
-	exists, err := tagService.ExistByID()
-	if err != nil {
-		appG.Response(http.StatusOK, e.ERROR_EXIST_TAG_FAIL, nil)
-		return
-	}
-
-	if !exists {
-		appG.Response(http.StatusOK, e.ERROR_NOT_EXIST_TAG, nil)
-		return
-	}
-
-	if err := tagService.Delete(); err != nil {
-		appG.Response(http.StatusOK, e.ERROR_DELETE_TAG_FAIL, nil)
-		return
-	}
-
-	appG.Response(http.StatusOK, e.SUCCESS, nil)
-}
-
-// @Summary 导出文章标签
-// @Produce  json
-// @Param name post string false "Name"
-// @Param state post int false "State"
-// @Success 200 {string} json "{"code":200,"data":{"export_save_url":"export/abc.xlsx", "export_url": "http://..."},"msg":"ok"}"
-// @Router /api/v1/tags/export [post]
-func ExportTag(c *gin.Context) {
-	appG := app.Gin{C: c}
-	name := c.PostForm("name")
-	state := -1
-	if arg := c.PostForm("state"); arg != "" {
-		state = com.StrTo(arg).MustInt()
-	}
-
-	tagService := tag_service.Tag{
-		Name:  name,
-		State: state,
-	}
-
-	filename, err := tagService.Export()
-	if err != nil {
-		appG.Response(http.StatusOK, e.ERROR_EXPORT_TAG_FAIL, nil)
-		return
-	}
-
-	appG.Response(http.StatusOK, e.SUCCESS, map[string]string{
-		"export_url":      export.GetExcelFullUrl(filename),
-		"export_save_url": export.GetExcelPath() + filename,
-	})
-}
-
-// @Summary 导入文章标签
-// @Produce  json
-// @Param file post file true "标签Excel文件"
-// @Success 200 {string} json "{"code":200,"data":null,"msg":"ok"}"
-// @Router /api/v1/tags/import [post]
-func ImportTag(c *gin.Context) {
-	appG := app.Gin{C: c}
-
-	file, _, err := c.Request.FormFile("file")
-	if err != nil {
-		logrus.Warn(err)
-		appG.Response(http.StatusOK, e.ERROR, nil)
-		return
-	}
-
-	tagService := tag_service.Tag{}
-	err = tagService.Import(file)
-	if err != nil {
-		logrus.Warn(err)
-		appG.Response(http.StatusOK, e.ERROR_IMPORT_TAG_FAIL, nil)
-		return
-	}
-
-	appG.Response(http.StatusOK, e.SUCCESS, nil)
-}
